--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -11,16 +11,9 @@
     <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
     <hr>
 
-    <div id="email-view">
-        <div class="container" id="email-content">
-
-        </div>
-        <div class="container" id="email-back-section">
-
-        </div>
-    </div>
-    <div id="emails-view" class="container">
-    </div>
+    <div id="emails-view"></div>
+    
+    <div id="email-view"></div>
 
     <div id="compose-view">
         <h3>New Email</h3>
