--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,7 +1,7 @@
 body {
-    background-color: lightgrey;
+    background-color: lightyellow;
 }
 textarea {
     min-height: 400px;
-    background-color: gray;
+    background-color: lightsteelblue;
 }
