--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -3,17 +3,19 @@
 
 {% block body %}
     <h2>{{ request.user.email }}</h2>
-
+    
     <button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
     <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
     <button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
-    <button class="btn btn-sm btn-outline-primary" id="archive">Archived</button>
-    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
+    <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>        
+    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a> 
     <hr>
-
-    <div id="emails-view"></div>
     
-    <div id="email-view"></div>
+    <div id="emails-view">
+    </div>
+
+    <div id="email-view">
+    </div>
 
     <div id="compose-view">
         <h3>New Email</h3>
@@ -22,13 +24,15 @@
                 From: <input disabled class="form-control" value="{{ request.user.email }}">
             </div>
             <div class="form-group">
-                To: <input id="compose-recipients" class="form-control">
+                To: <input id="compose-recipients" class="form-control" placeholder="Recipients">
             </div>
             <div class="form-group">
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
-            <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
+            <div class="form-group">
+                <textarea class="form-control" id="compose-body"></textarea>
+            </div>
+            <input type="submit" class="btn btn-primary" value="Send"/>            
         </form>
     </div>
 {% endblock %}
